Apparently Linux Lua also uses ; as path separator

--- a/luarocks_install.cmake.in
+++ b/luarocks_install.cmake.in
@@ -5,7 +5,7 @@ message(STATUS "LUA_INTERPRETER ${LUA_INTERPRETER}")
 message(STATUS "EXTRAPATH ${EXTRAPATH}")
 
 
-set(ENV{LUA_PATH} "${LUAROCKS_SITECONFIG_DIR}/?.lua@DELIM@${LUAROCKS_SRC_DIR}/?.lua@DELIM@${LUAROCKS_SRC_DIR}/?/init.lua@DELIM@$ENV{LUA_PATH}")
+set(ENV{LUA_PATH} "${LUAROCKS_SITECONFIG_DIR}/?.lua;${LUAROCKS_SRC_DIR}/?.lua;${LUAROCKS_SRC_DIR}/?/init.lua;$ENV{LUA_PATH}")
 message(STATUS "ENV{LUA_PATH} $ENV{LUA_PATH}")
 
 set(ENV{PATH} "${EXTRAPATH}@DELIM@$ENV{PATH}")
