the UNAME_M is definitely advanced.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,7 @@ else()
 			OUTPUT_VARIABLE LUAROCKS_UNAME_M
 			OUTPUT_STRIP_TRAILING_WHITESPACE)
 		set(LUAROCKS_UNAME_M "${LUAROCKS_UNAME_M}" CACHE STRING "")
+		mark_as_advanced(LUAROCKS_UNAME_M)
 	endif()
 endif()
 
