--- a/luarocks_install.cmake.in
+++ b/luarocks_install.cmake.in
@@ -1,16 +1,10 @@
 set(LUAROCKS_SITECONFIG_DIR "@LUAROCKS_SITECONFIG_BUILDLOCATION@")
-
-message(STATUS "LUAROCKS_SRC_DIR ${LUAROCKS_SRC_DIR}")
-message(STATUS "LUA_INTERPRETER ${LUA_INTERPRETER}")
-message(STATUS "EXTRAPATH ${EXTRAPATH}")
-
-
 set(ENV{LUA_PATH} "${LUAROCKS_SITECONFIG_DIR}/?.lua;${LUAROCKS_SRC_DIR}/?.lua;${LUAROCKS_SRC_DIR}/?/init.lua;$ENV{LUA_PATH}")
-message(STATUS "ENV{LUA_PATH} $ENV{LUA_PATH}")
-
 set(ENV{PATH} "${EXTRAPATH}@DELIM@$ENV{PATH}")
 
 set(CMD "${LUA_INTERPRETER}" "${LUAROCKS_SRC_DIR}/bin/luarocks" --tree=${ROCKS_TREE} LUA_LIBDIR=${LUA_LIBDIR} LUA_BINDIR=${LUA_BINDIR} install "${ROCK}")
-execute_process(COMMAND "${CMAKE_COMMAND}" -E echo ${CMD})
+
+execute_process(COMMAND "${CMAKE_COMMAND}" -E echo Will run: ${CMD})
+
+execute_process(COMMAND "${CMAKE_COMMAND}" -E echo )
 execute_process(COMMAND ${CMD})
-#execute_process(COMMAND "${LUA_INTERPRETER}" "${LUAROCKS_SRC_DIR}/bin/luarocks" ${LUAROCKS_ARGS})
