Run the bulk decrufter on the cmake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,11 @@ endif()
 
 # LUA_VERSION
 if(NOT DEFINED LUAROCKS_LUA_VERSION)
-	set(LUAROCKS_LUA_VERSION 5.1 CACHE STRING "Use specific Lua version: 5.1 or 5.2 (EXPERIMENTAL)")
+	set(LUAROCKS_LUA_VERSION
+		5.1
+		CACHE
+		STRING
+		"Use specific Lua version: 5.1 or 5.2 (EXPERIMENTAL)")
 endif()
 foreach(ACCEPTABLE_VERSION 5.1 5.2)
 	if(LUAROCKS_LUA_VERSION STREQUAL "${ACCEPTABLE_VERSION}")
@@ -19,25 +23,35 @@ foreach(ACCEPTABLE_VERSION 5.1 5.2)
 	endif()
 endforeach()
 if(NOT LUA_VERSION_VALIDATED)
-	message(ERROR "Invalid value for LUAROCKS_LUA_VERSION: ${LUAROCKS_LUA_VERSION}")
+	message(ERROR
+		"Invalid value for LUAROCKS_LUA_VERSION: ${LUAROCKS_LUA_VERSION}")
 endif()
 
 # ROCKS_TREE
 if(NOT DEFINED LUAROCKS_ROCKS_TREE)
-	set(LUAROCKS_ROCKS_TREE "" CACHE PATH
-	"Root of the local tree of installed rocks. Leave empty for the default: the prefix. Relative paths are interpreted relative to the install prefix.")
+	set(LUAROCKS_ROCKS_TREE
+		""
+		CACHE
+		PATH
+		"Root of the local tree of installed rocks. Leave empty for the default: the prefix. Relative paths are interpreted relative to the install prefix.")
 endif()
 
 # LUA_SUFFIX
 if(NOT DEFINED LUAROCKS_LUA_SUFFIX)
-	set(LUAROCKS_LUA_SUFFIX "" CACHE STRING
-	"Versioning suffix to use in Lua filenames. Empty is the default.")
+	set(LUAROCKS_LUA_SUFFIX
+		""
+		CACHE
+		STRING
+		"Versioning suffix to use in Lua filenames. Empty is the default.")
 endif()
 
 # SYSCONFDIR
 if(NOT DEFINED LUAROCKS_SYSCONFDIR)
-	set(LUAROCKS_SYSCONFDIR "etc/luarocks" CACHE PATH
-	"Location where the config file should be installed. Default is etc/luarocks. Relative paths are interpreted relative to the install prefix.")
+	set(LUAROCKS_SYSCONFDIR
+		"etc/luarocks"
+		CACHE
+		PATH
+		"Location where the config file should be installed. Default is etc/luarocks. Relative paths are interpreted relative to the install prefix.")
 endif()
 
 # FORCE_CONFIG
@@ -46,7 +60,9 @@ option(LUAROCKS_FORCE_CONFIG
 	OFF)
 
 if(WIN32 AND NOT LUAROCKS_SUBPROJECT_BUILD)
-	option(LUAROCKS_INSTALL_BUNDLED_LUA "Should we use the Lua binaries bundled with LuaRocks?" ON)
+	option(LUAROCKS_INSTALL_BUNDLED_LUA
+		"Should we use the Lua binaries bundled with LuaRocks?"
+		ON)
 endif()
 
 if(LUAROCKS_SUBPROJECT_BUILD)
@@ -76,9 +92,13 @@ else()
 
 	if(NOT DEFINED LUAROCKS_DOWNLOADER)
 		if(NOT DOWNLOADER_DEFAULT)
-			message(FATAL_ERROR "Could not find curl or wget, and LUAROCKS_DOWNLOADER not defined!")
+			message(FATAL_ERROR
+				"Could not find curl or wget, and LUAROCKS_DOWNLOADER not defined!")
 		endif()
-		set(LUAROCKS_DOWNLOADER "${DOWNLOADER_DEFAULT}" CACHE STRING
+		set(LUAROCKS_DOWNLOADER
+			"${DOWNLOADER_DEFAULT}"
+			CACHE
+			STRING
 			"Whether to use wget or curl as downloader.")
 	endif()
 
@@ -95,9 +115,13 @@ else()
 	endif()
 	if(NOT DEFINED LUAROCKS_MD5CHECKER)
 		if(NOT CHECKER_DEFAULT)
-			message(FATAL_ERROR "Could not find md5sum, md5, or openssl utility, and LUAROCKS_MD5CHECKER not defined!")
+			message(FATAL_ERROR
+				"Could not find md5sum, md5, or openssl utility, and LUAROCKS_MD5CHECKER not defined!")
 		endif()
-		set(LUAROCKS_MD5CHECKER "${CHECKER_DEFAULT}" CACHE STRING
+		set(LUAROCKS_MD5CHECKER
+			"${CHECKER_DEFAULT}"
+			CACHE
+			STRING
 			"Whether to use md5sum, md5, or openssl utility as MD5 checker.")
 	endif()
 endif()
@@ -121,8 +145,11 @@ if(WIN32)
 else()
 	set(LUAROCKS_UNAME_S ${CMAKE_SYSTEM_NAME})
 	if(NOT DEFINED LUAROCKS_UNAME_M)
-		execute_process(COMMAND uname -m
-			OUTPUT_VARIABLE LUAROCKS_UNAME_M
+		execute_process(COMMAND
+			uname
+			-m
+			OUTPUT_VARIABLE
+			LUAROCKS_UNAME_M
 			OUTPUT_STRIP_TRAILING_WHITESPACE)
 		set(LUAROCKS_UNAME_M "${LUAROCKS_UNAME_M}" CACHE STRING "")
 		mark_as_advanced(LUAROCKS_UNAME_M)
@@ -138,8 +165,11 @@ foreach(POSSIBLY_RELATIVE LUAROCKS_ROCKS_TREE LUAROCKS_SYSCONFDIR)
 		set(_rel ON)
 	endif()
 	if(_rel)
-		message(STATUS "Detected that ${POSSIBLY_RELATIVE}='${${POSSIBLY_RELATIVE}}' is relative")
-		get_filename_component(${POSSIBLY_RELATIVE} "${CMAKE_INSTALL_PREFIX}/${${POSSIBLY_RELATIVE}}" ABSOLUTE)
+		message(STATUS
+			"Detected that ${POSSIBLY_RELATIVE}='${${POSSIBLY_RELATIVE}}' is relative")
+		get_filename_component(${POSSIBLY_RELATIVE}
+			"${CMAKE_INSTALL_PREFIX}/${${POSSIBLY_RELATIVE}}"
+			ABSOLUTE)
 	endif()
 endforeach()
 
@@ -149,14 +179,18 @@ endforeach()
 # TODO these are often wrong on other platforms
 set(PREFIX "${CMAKE_INSTALL_PREFIX}")
 set(BINDIR_RELATIVE .)
-get_filename_component(BINDIR "${CMAKE_INSTALL_PREFIX}/${BINDIR_RELATIVE}" ABSOLUTE)
+get_filename_component(BINDIR
+	"${CMAKE_INSTALL_PREFIX}/${BINDIR_RELATIVE}"
+	ABSOLUTE)
 
 #set(LIBDIR_RELATIVE .)
 #get_filename_component(LIBDIR "${CMAKE_INSTALL_PREFIX}/${LIBDIR_RELATIVE}" ABSOLUTE)
 get_filename_component(LIBDIR "${LUA_LIBRARY}" PATH)
 
 set(LUADIR_RELATIVE lua)
-get_filename_component(LUADIR "${CMAKE_INSTALL_PREFIX}/${LUADIR_RELATIVE}" ABSOLUTE)
+get_filename_component(LUADIR
+	"${CMAKE_INSTALL_PREFIX}/${LUADIR_RELATIVE}"
+	ABSOLUTE)
 
 if(LUAROCKS_INSTALL_BUNDLED_LUA)
 	set(LUA_INTERPRETER "${BINDIR}/lua5.1.exe")
@@ -171,36 +205,50 @@ endif()
 set(INCDIR "${LUA_INCLUDE_DIR}")
 
 
-get_filename_component(LUA_INTERPRETER_BASENAME "${LUA_INTERPRETER}" NAME)
+get_filename_component(LUA_INTERPRETER_BASENAME
+	"${LUA_INTERPRETER}"
+	NAME)
 if(NOT LUA_INTERPRETER_BASENAME STREQUAL "lua")
-	set(LUAROCKS_INTERPRETER_LINE "LUA_INTERPRETER=[[${LUA_INTERPRETER_BASENAME}]]")
+	set(LUAROCKS_INTERPRETER_LINE
+		"LUA_INTERPRETER=[[${LUA_INTERPRETER_BASENAME}]]")
 endif()
 
 get_filename_component(LUA_INTERPRETER_DIR "${LUA_INTERPRETER}" PATH)
 
 message(STATUS "Installation prefix: ${CMAKE_INSTALL_PREFIX}")
-message(STATUS "LuaRocks configuration directory: ${LUAROCKS_SYSCONFDIR}")
+message(STATUS
+	"LuaRocks configuration directory: ${LUAROCKS_SYSCONFDIR}")
 message(STATUS "Using Lua from: ${LUA_INCLUDE_DIR}")
 
 
 # Generate launcher scripts
 file(RELATIVE_PATH LUADIR_RELATIVE_TO_BINDIR "${BINDIR}" "${LUADIR}")
-file(TO_NATIVE_PATH "${LUADIR_RELATIVE_TO_BINDIR}" LUADIR_RELATIVE_TO_BINDIR)
+file(TO_NATIVE_PATH
+	"${LUADIR_RELATIVE_TO_BINDIR}"
+	LUADIR_RELATIVE_TO_BINDIR)
 message(STATUS "LUADIR_RELATIVE_TO_BINDIR ${LUADIR_RELATIVE_TO_BINDIR}")
 file(TO_NATIVE_PATH "${LUA_INTERPRETER_DIR}" LUA_INTERPRETER_DIR)
 
 if(WIN32)
 	foreach(SCRIPTNAME luarocks luarocks-admin)
-		configure_file("${CMAKE_CURRENT_SOURCE_DIR}/launcher.bat.in" "${CMAKE_CURRENT_BINARY_DIR}/${SCRIPTNAME}.bat")
-		install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${SCRIPTNAME}.bat"
-			DESTINATION ${BINDIR_RELATIVE})
+		configure_file("${CMAKE_CURRENT_SOURCE_DIR}/launcher.bat.in"
+			"${CMAKE_CURRENT_BINARY_DIR}/${SCRIPTNAME}.bat")
+		install(FILES
+			"${CMAKE_CURRENT_BINARY_DIR}/${SCRIPTNAME}.bat"
+			DESTINATION
+			${BINDIR_RELATIVE})
 	endforeach()
 	add_subdirectory(win32/bin)
 endif()
 
 file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/buildtree")
 file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/buildtree/luarocks")
-set(LUAROCKS_SITECONFIG_BUILDLOCATION "${CMAKE_CURRENT_BINARY_DIR}/buildtree" CACHE INTERNAL "" FORCE)
+set(LUAROCKS_SITECONFIG_BUILDLOCATION
+	"${CMAKE_CURRENT_BINARY_DIR}/buildtree"
+	CACHE
+	INTERNAL
+	""
+	FORCE)
 
 if(MSVC)
 	set(WRAPPER "${CMAKE_CURRENT_SOURCE_DIR}/win32/bin/rclauncher.obj")
@@ -209,7 +257,9 @@ else()
 endif()
 
 
-configure_file(buildtree_site_config.lua.in "${CMAKE_CURRENT_BINARY_DIR}/buildtree/luarocks/site_config.lua" @ONLY)
+configure_file(buildtree_site_config.lua.in
+	"${CMAKE_CURRENT_BINARY_DIR}/buildtree/luarocks/site_config.lua"
+	@ONLY)
 
 add_subdirectory(src/bin)
 add_subdirectory(src/luarocks)
