Quote more things.

--- a/luarocks_install.cmake.in
+++ b/luarocks_install.cmake.in
@@ -6,10 +6,10 @@ set(ENV{PATH} "${EXTRAPATH}@DELIM@$ENV{PATH}")
 set(CMD
 	"${LUA_INTERPRETER}"
 	"${LUAROCKS_SRC_DIR}/bin/luarocks"
-	--tree=${ROCKS_TREE}
-	LUA_LIBDIR=${LUA_LIBDIR}
-	LUA_BINDIR=${LUA_BINDIR}
-	LUALIB=${LUALIB}
+	"--tree=${ROCKS_TREE}"
+	"LUA_LIBDIR=${LUA_LIBDIR}"
+	"LUA_BINDIR=${LUA_BINDIR}"
+	"LUALIB=${LUALIB}"
 	install
 	"${ROCK}")
 
